fix: fix dop gantt

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -58,6 +58,7 @@
     "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see": "各环境对应的集群资源信息，具体集群的概念和设置请参考",
     "For editing members, setting member roles and role permissions, please refer to": "编辑成员，设置成员角色，相关角色权限请参考",
     "Frankfurt": "法兰克福",
+    "Fri": "五",
     "Germany": "德国",
     "Go to page": "前往页",
     "Group": "群组",
@@ -85,6 +86,7 @@
     "Middle-east & India": "中东与印度",
     "Mobile": "移动",
     "Model": "模型",
+    "Mon": "一",
     "Mumbai": "孟买",
     "New version available": "新版本可用",
     "North China {num}": "华北{num}",
@@ -120,6 +122,7 @@
     "SMS": "短信",
     "SMS Template Code": "短信模板 Code",
     "SMS signature": "短信签名",
+    "Sat": "六",
     "September": "9月",
     "Service": "服务",
     "Set up a notification channel to set a notification mode": "建立通知通道以设置通知模式",
@@ -131,6 +134,7 @@
     "South China": "华南{num}",
     "Southwest China {num}": "西南{num}",
     "Submit the following information to the service provider to apply for an SMS template": "请按如下内容提交至服务商申请短信模板",
+    "Sun": "日",
     "Supported Android package versions": "支持的 Android 包版本",
     "Supported iOS package versions": "支持的 iOS 包版本",
     "Sydney": "悉尼",
@@ -145,14 +149,17 @@
     "The {index} item quantity and unit cannot be empty.": "第{index}项数量和单位不得为空",
     "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable": "{type}类型无开启的渠道，是否开启 {name} 渠道？ 点击确定按钮后开启",
     "This page has no data, whether to go": "该页暂无数据，是否前往",
+    "Thu": "四",
     "Tickets": "工单",
     "Tokyo": "东京",
+    "Tue": "二",
     "URL parameters": "URL参数",
     "Under the same channel type, {type} type has an enabled channel {enableChannelName}, whether to switch to {name} channel ? Click ok button to confirm the switch, and close the enabled": "同一渠道类型下，{type}类型有已开启的渠道 {enableChannelName} , 是否切换为 {name} 渠道 ？点击确定按钮进行切换，同时关闭已开启的",
     "United Arab Emirates": "阿联酋",
     "United States": "美国",
     "Version has been updated, it is recommended to refresh the page": "版本已更新，建议刷新页面",
     "Virginia": "弗利尼亚",
+    "Wed": "三",
     "Welcome!": "欢迎！",
     "You can use ClientID and ClientSecret below to access API instance after approval.": "待审批通过后, 您可以使用以下的 ClientID 和 ClientSecret 访问 API 实例。",
     "You do not have enough permissions": "您的权限不足",
@@ -658,6 +665,7 @@
     "performance interval": "性能区间",
     "period": "周期",
     "pipeline": "流水线",
+    "plan": "计划",
     "platform": "平台",
     "platform configs": "平台配置",
     "please authenticate first": "请先进行认证",
