--- a/locales/en.json
+++ b/locales/en.json
@@ -58,6 +58,7 @@
     "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see": "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see",
     "For editing members, setting member roles and role permissions, please refer to": "For editing members, setting member roles and role permissions, please refer to",
     "Frankfurt": "Frankfurt",
+    "Fri": "Fri",
     "Germany": "Germany",
     "Go to page": "Go to page",
     "Group": "Group",
@@ -85,6 +86,7 @@
     "Middle-east & India": "Middle-east & India",
     "Mobile": "Mobile",
     "Model": "Model",
+    "Mon": "Mon",
     "Mumbai": "Mumbai",
     "New version available": "New version available",
     "North China {num}": "North China {num}",
@@ -120,6 +122,7 @@
     "SMS": "SMS",
     "SMS Template Code": "SMS Template Code",
     "SMS signature": "SMS signature",
+    "Sat": "Sat",
     "September": "September",
     "Service": "Service",
     "Set up a notification channel to set a notification mode": "Set up a notification channel to set a notification mode",
@@ -131,6 +134,7 @@
     "South China": "South China",
     "Southwest China {num}": "Southwest China {num}",
     "Submit the following information to the service provider to apply for an SMS template": "Submit the following information to the service provider to apply for an SMS template",
+    "Sun": "Sun",
     "Supported Android package versions": "Supported Android package versions",
     "Supported iOS package versions": "Supported iOS package versions",
     "Sydney": "Sydney",
@@ -145,14 +149,17 @@
     "The {index} item quantity and unit cannot be empty.": "The {index} item quantity and unit cannot be empty.",
     "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable": "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable",
     "This page has no data, whether to go": "This page has no data, whether to go",
+    "Thu": "Thu",
     "Tickets": "Tickets",
     "Tokyo": "Tokyo",
+    "Tue": "Tue",
     "URL parameters": "URL parameters",
     "Under the same channel type, {type} type has an enabled channel {enableChannelName}, whether to switch to {name} channel ? Click ok button to confirm the switch, and close the enabled": "Under the same channel type, {type} type has an enabled channel {enableChannelName}, whether to switch to {name} channel ? Click ok button to confirm the switch, and close the enabled",
     "United Arab Emirates": "United Arab Emirates",
     "United States": "United States",
     "Version has been updated, it is recommended to refresh the page": "Version has been updated, it is recommended to refresh the page",
     "Virginia": "Virginia",
+    "Wed": "Wed",
     "Welcome!": "Welcome!",
     "You can use ClientID and ClientSecret below to access API instance after approval.": "You can use ClientID and ClientSecret below to access API instance after approval.",
     "You do not have enough permissions": "You do not have enough permissions",
@@ -658,6 +665,7 @@
     "performance interval": "performance interval",
     "period": "period",
     "pipeline": "pipeline",
+    "plan": "plan",
     "platform": "platform",
     "platform configs": "platform configs",
     "please authenticate first": "please authenticate first",
