--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1110,6 +1110,7 @@
     "create and relate to the issue": "create and relate to the issue",
     "create document": "create document",
     "create folder": "create folder",
+    "create issue": "create issue",
     "create milestone": "create milestone",
     "create new file": "create new file",
     "create new folder": "create new folder",
