--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -794,6 +794,7 @@
   },
   "dop": {
     " coverage": " coverage",
+    "Are you sure to disinclude {name}": "Are you sure to disinclude {name}",
     "API design": "API design",
     "API list": "API list",
     "API overview": "API overview",
@@ -1107,6 +1108,7 @@
     "copy issue": "copy issue",
     "copy to": "copy to",
     "cores": "cores",
+    "create and include the task": "create and include the task",
     "create and relate to the issue": "create and relate to the issue",
     "create document": "create document",
     "create folder": "create folder",
@@ -1290,6 +1292,8 @@
     "import use case": "import use case",
     "imported {total} item successfully": "imported {total} item successfully",
     "imported {total} item unsuccessfully": "imported {total} item unsuccessfully",
+    "include existing tasks": "include existing tasks",
+    "included tasks": "included tasks",
     "initiated": "initiated",
     "input bug name": "input bug name",
     "input custom board name": "input custom board name",
@@ -1606,6 +1610,7 @@
     "related to existing issues": "related to existing issues",
     "related to these issues": "related to these issues",
     "relation added successfully": "relation added successfully",
+    "release relationship": "release relationship",
     "release version": "release version",
     "remark": "remark",
     "remarked at": "remarked at",
