feat: code optimization

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1378,6 +1378,7 @@
     "missing deadline": "missing deadline",
     "missing estimateTime": "missing estimateTime",
     "missing import source": "missing import source",
+    "missing startTime": "missing startTime",
     "missing task type": "missing task type",
     "missing title": "missing title",
     "mobile": "mobile",
