--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1378,6 +1378,7 @@
     "missing deadline": "截止日期未选择",
     "missing estimateTime": "未填写预估时间",
     "missing import source": "缺少引入源",
+    "missing startTime": "开始日期未选择",
     "missing task type": "未填写任务类型",
     "missing title": "标题未填写",
     "mobile": "手机号",
