feature: dop gantt (#2182)
* feat: add dop gantt

* fix: add gantt components

* fix: update data

* fix: add gantt tree

* fix: fix data format

* fix: update data formate

* fix: fix gantt style

* feat(dop): dop gantt left tree expand and create issue button (#2174)

* fix: fix dop gantt

* Hotfix/dop gantt left tree style optimization and expand bug (#2181)

* feat(dop): dop gantt left tree expand and create issue button

* fix(dop): dop gantt left tree style optimization and expand bug

* fix: add license

* fix: delete useless package

* fix: fix style

* Update index.tsx

* Hotfix/dop gantt style optimization (#2184)

* feat(dop): dop gantt left tree expand and create issue button

* fix(dop): dop gantt left tree style optimization and expand bug

* fix(dop): dop gantt style optimization

* feat: code optimization

* fix: add task time in grid

* fix: fix grid add

* fix: fix gantt tree line

* fix: fix comment

Co-authored-by: hujiahao-hjh <82502479+hujiahao-hjh@users.noreply.github.com>

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1110,6 +1110,7 @@
     "create and relate to the issue": "create and relate to the issue",
     "create document": "create document",
     "create folder": "create folder",
+    "create issue": "create issue",
     "create milestone": "create milestone",
     "create new file": "create new file",
     "create new folder": "create new folder",
@@ -1164,6 +1165,7 @@
     "disassociate": "disassociate",
     "disassociated successfully": "disassociated successfully",
     "disk size": "disk size",
+    "display on demand": "display on demand",
     "displayed name": "displayed name",
     "distributed collaboration": "distributed collaboration",
     "do not start with a space": "do not start with a space",
