--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1110,6 +1110,7 @@
     "create and relate to the issue": "创建并关联事项",
     "create document": "创建文档",
     "create folder": "新建文件夹",
+    "create issue": "新建事项",
     "create milestone": "创建里程碑",
     "create new file": "新建文件",
     "create new folder": "创建文件夹",
@@ -1164,6 +1165,7 @@
     "disassociate": "解除关联",
     "disassociated successfully": "解除关联成功",
     "disk size": "磁盘大小",
+    "display on demand": "按需求显示",
     "displayed name": "显示名称",
     "distributed collaboration": "分布式协作",
     "do not start with a space": "不要以空格开头",
