feat: use new Table replace it

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -231,7 +231,7 @@
     "approver": "审批人员",
     "archive": "归档",
     "archived": "已归档",
-    "are you sure you want to delete this item?": "您确定要删除此项目吗?",
+    "are you sure you want to delete this item?": "您确定要删除此项吗?",
     "are you sure?": "是否确认？",
     "artifact ID": "制品 ID",
     "artifact management": "制品管理",
@@ -886,6 +886,7 @@
     "text mode": "文本模式",
     "the current request has no {name}": "当前请求无{name}",
     "the current version is deprecated": "当前版本已被弃用",
+    "the item will be permanently deleted!": "该项将被永久删除!",
     "the length of {type} must not exceed {maxLength} characters": "{type} 的长度不得超过{maxLength}字符",
     "the notification channel will be permanently deleted": "通知渠道将被永久删除",
     "the same {key} exists": "存在相同的{key}",
