--- a/locales/en.json
+++ b/locales/en.json
@@ -886,6 +886,7 @@
     "text mode": "text mode",
     "the current request has no {name}": "the current request has no {name}",
     "the current version is deprecated": "the current version is deprecated",
+    "the item will be permanently deleted!": "the item will be permanently deleted!",
     "the length of {type} must not exceed {maxLength} characters": "the length of {type} must not exceed {maxLength} characters",
     "the notification channel will be permanently deleted": "the notification channel will be permanently deleted",
     "the same {key} exists": "the same {key} exists",
