fix: place email to first tab

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -702,6 +702,7 @@
     "double confirm": "再次确认",
     "download log": "下载日志",
     "duration(minutes)": "时长(分钟)",
+    "email": "邮件",
     "end at": "结束时间",
     "endDate": "结束日期",
     "error occurred": "页面出错了",
