--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -702,6 +702,7 @@
     "double confirm": "double confirm",
     "download log": "download log",
     "duration(minutes)": "duration(minutes)",
+    "email": "email",
     "end at": "end at",
     "endDate": "endDate",
     "error occurred": "error occurred",
