feat(msp): service-list page

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1950,6 +1950,7 @@
     "add to query": "add to query",
     "add {scope} API": "add {scope} API",
     "address": "address",
+    "average delay": "average delay",
     "ajax interface": "ajax interface",
     "ajax performance trends": "ajax performance trends",
     "alarm history": "alarm history",
