--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1977,6 +1977,7 @@
     "ascending order": "升序",
     "associated services": "关联服务",
     "attributes": "属性",
+    "average delay": "平均延迟",
     "audit": "审计",
     "authentication management": "鉴权管理",
     "authentication mode": "鉴权模式",
