--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2138,6 +2138,7 @@
     "error page": "error page",
     "error rate": "error rate",
     "error ratio": "error ratio",
+    "error request count": "error request count",
     "error source": "error source",
     "error stack": "error stack",
     "error statistics": "error statistics",
