--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2139,6 +2139,7 @@
     "error page": "出错页面",
     "error rate": "错误率",
     "error ratio": "错误比例",
+    "error request count": "错误请求次数",
     "error source": "错误来源",
     "error stack": "错误堆栈",
     "error statistics": "错误统计",
