feat(msp): add help icon text

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2101,6 +2101,7 @@
     "determine": "determine",
     "device": "device",
     "device type": "device type",
+    "definition of qps": "definition of qps",
     "display fields": "display fields",
     "display name": "display name",
     "display setting": "display setting",
