--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1951,6 +1951,7 @@
     "add to query": "add to query",
     "add {scope} API": "add {scope} API",
     "address": "address",
+    "average delay": "average delay",
     "ajax interface": "ajax interface",
     "ajax performance trends": "ajax performance trends",
     "alarm history": "alarm history",
@@ -2100,6 +2101,7 @@
     "determine": "determine",
     "device": "device",
     "device type": "device type",
+    "definition of qps": "definition of qps",
     "display fields": "display fields",
     "display name": "display name",
     "display setting": "display setting",
