feat: update project type name

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -87,7 +87,7 @@
     "Memory quota": "Memory quota",
     "Memory quota usage": "Memory quota usage",
     "Memory usage": "Memory usage",
-    "Microservice Observation Project": "Microservice Observation Project",
+    "Monitor Project": "Monitor Project",
     "Monthly": "Monthly",
     "MySQL Erda database": "MySQL Erda database",
     "MySQL Host": "MySQL Host",
