--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -87,7 +87,7 @@
     "Memory quota": "内存配额",
     "Memory quota usage": "内存配额使用",
     "Memory usage": "内存使用",
-    "Microservice Observation Project": "微服务观测项目",
+    "Monitor Project": "监控项目",
     "Monthly": "每月",
     "MySQL Erda database": "MySQL Erda数据库名",
     "MySQL Host": "MySQL主机",
@@ -1906,7 +1906,7 @@
     "Choose different indicators and user features for comparative analysis for different business types and scenarios, to locate issues accurately.": "不同的业务类型和业务场景选择不同的指标和用户特征进行对比分析，精准定位问题所在",
     "DNS parsing times": "DNS解析次数",
     "Database call": "数据库调用",
-    "DevOps Project": "DevOps 项目",
+    "DevOps Project": "研发项目",
     "ERROR COUNT DESC": "错误次数倒序",
     "Erda service": "Erda服务",
     "Failed to cancel. Please try again late.": "取消失败，请稍后重试",
