feat: update tab text

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -871,6 +871,7 @@
     "tag": "标签",
     "tags": "标签",
     "task": "任务",
+    "requirement & task": "需求与任务",
     "task ID": "任务 ID",
     "task list": "任务列表",
     "task ticket": "任务工单",
