feat(msp): add rps

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2133,6 +2133,7 @@
     "environments": "environments",
     "equal": "equal",
     "error analysis": "error analysis",
+    "error call times": "error call times",
     "error code": "error code",
     "error code and error ratio should be set at the same time": "error code and error ratio should be set at the same time",
     "error code tracking": "error code tracking",
@@ -2141,7 +2142,6 @@
     "error page": "error page",
     "error rate": "error rate",
     "error ratio": "error ratio",
-    "error request count": "error request count",
     "error source": "error source",
     "error stack": "error stack",
     "error statistics": "error statistics",
