--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2133,6 +2133,7 @@
     "environments": "环境",
     "equal": "等于",
     "error analysis": "错误分析",
+    "error call times": "错误调用次数",
     "error code": "错误码",
     "error code and error ratio should be set at the same time": "错误码和错误比例需同时设置",
     "error code tracking": "错误码追踪",
@@ -2141,7 +2142,6 @@
     "error page": "出错页面",
     "error rate": "错误率",
     "error ratio": "错误比例",
-    "error request count": "错误请求次数",
     "error source": "错误来源",
     "error stack": "错误堆栈",
     "error statistics": "错误统计",
