fix(msp): perfect service list page

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1993,6 +1993,7 @@
     "availability": "availability",
     "availability and performance": "availability and performance",
     "available": "available",
+    "average": "average",
     "average call time": "average call time",
     "average load time": "average load time",
     "average load time - browser type": "average load time - browser type",
@@ -2101,7 +2102,9 @@
     "determine": "determine",
     "device": "device",
     "device type": "device type",
-    "definition of qps": "definition of qps",
+    "definition of rps": "definition of rps",
+    "definition of average delay": "definition of average delay",
+    "definition of error rate": "definition of error rate",
     "display fields": "display fields",
     "display name": "display name",
     "display setting": "display setting",
@@ -2406,6 +2409,7 @@
     "select sorting method": "select sorting method",
     "selector": "selector",
     "send data": "send data",
+    "service indicators for the current environment": "service indicators for the current environment",
     "server response": "server response",
     "service API prefix": "service API prefix",
     "service analysis": "service analysis",
