--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1993,6 +1993,7 @@
     "availability": "可用性",
     "availability and performance": "可用性及性能",
     "available": "可用",
+    "average": "平均",
     "average call time": "平均调用时间",
     "average load time": "平均加载时间",
     "average load time - browser type": "平均加载时间-浏览器类型",
@@ -2101,7 +2102,9 @@
     "determine": "确定",
     "device": "设备",
     "device type": "设备类型",
-    "definition of qps": "全名 Queries Per Second，即 每秒查询率，是一台服务器每秒能够响应的查询次数",
+    "definition of rps": "即吞吐率，每秒钟服务可以处理的请求数",
+    "definition of average delay": "单位时间内服务处理请求或者任务的平均耗时",
+    "definition of error rate": "单位时间内所有请求中结果出错的请求所占比",
     "display fields": "显示字段",
     "display name": "展示名称",
     "display setting": "显示设置",
@@ -2406,6 +2409,7 @@
     "select sorting method": "选择排序方式",
     "selector": "选择器",
     "send data": "发送数据",
+    "service indicators for the current environment": "展示当前环境下所有接入的服务，以及该服务最近一小时内的关键请求指标",
     "server response": "服务器响应",
     "service API prefix": "服务 API 前缀",
     "service analysis": "服务分析",
