--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1951,7 +1951,6 @@
     "add to query": "add to query",
     "add {scope} API": "add {scope} API",
     "address": "address",
-    "average delay": "average delay",
     "ajax interface": "ajax interface",
     "ajax performance trends": "ajax performance trends",
     "alarm history": "alarm history",
@@ -1993,12 +1992,13 @@
     "availability": "availability",
     "availability and performance": "availability and performance",
     "available": "available",
-    "average": "average",
     "average call time": "average call time",
+    "average delay": "average delay",
     "average load time": "average load time",
     "average load time - browser type": "average load time - browser type",
     "average load time - device type": "average load time - device type",
     "average response time": "average response time",
+    "average throughput": "average throughput",
     "average time": "average time",
     "average value": "average value",
     "backend build timeout": "backend build timeout",
@@ -2092,6 +2092,9 @@
     "data collection desc": "only Java Agent supports exception analysis and JVM monitoring. Data collection methods such as Jaeger and Open Telemetry only support the analysis and display of call link tracking data.",
     "data distribution": "data distribution",
     "day": "day",
+    "definition of average delay": "definition of average delay",
+    "definition of error rate": "definition of error rate",
+    "definition of rps": "definition of rps",
     "delay analysis": "delay analysis",
     "delay ratio": "delay ratio",
     "delay time": "delay time",
@@ -2102,9 +2105,6 @@
     "determine": "determine",
     "device": "device",
     "device type": "device type",
-    "definition of rps": "definition of rps",
-    "definition of average delay": "definition of average delay",
-    "definition of error rate": "definition of error rate",
     "display fields": "display fields",
     "display name": "display name",
     "display setting": "display setting",
@@ -2409,7 +2409,6 @@
     "select sorting method": "select sorting method",
     "selector": "selector",
     "send data": "send data",
-    "service indicators for the current environment": "service indicators for the current environment",
     "server response": "server response",
     "service API prefix": "service API prefix",
     "service analysis": "service analysis",
@@ -2422,6 +2421,7 @@
     "set to benchmark log": "set to benchmark log",
     "shortest isolation time": "shortest isolation time",
     "show": "show",
+    "show all connected services in the current environment, as well as the key request indicators of the service in the last hour": "show all connected services in the current environment, as well as the key request indicators of the service in the last hour",
     "skip authentication": "skip authentication",
     "slow database tracking TOP10": "slow database tracking TOP10",
     "slow loading tracking": "slow loading tracking",
