--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1978,7 +1978,6 @@
     "ascending order": "升序",
     "associated services": "关联服务",
     "attributes": "属性",
-    "average delay": "平均延迟",
     "audit": "审计",
     "authentication management": "鉴权管理",
     "authentication mode": "鉴权模式",
@@ -1993,12 +1992,13 @@
     "availability": "可用性",
     "availability and performance": "可用性及性能",
     "available": "可用",
-    "average": "平均",
     "average call time": "平均调用时间",
+    "average delay": "平均延迟",
     "average load time": "平均加载时间",
     "average load time - browser type": "平均加载时间-浏览器类型",
     "average load time - device type": "平均加载时间-设备类型",
     "average response time": "平均响应时间",
+    "average throughput": "平均吞吐量",
     "average time": "平均时间",
     "average value": "平均值",
     "backend build timeout": "后端建连超时",
@@ -2092,6 +2092,9 @@
     "data collection desc": "仅 Java Agent 支持异常分析和 JVM 监控，Jaeger、Open Telemetry 等数据采集方式仅支持调用链路追踪数据的分析和展示",
     "data distribution": "数据分布",
     "day": "天",
+    "definition of average delay": "单位时间内服务处理请求或者任务的平均耗时",
+    "definition of error rate": "单位时间内所有请求中结果出错的请求所占比",
+    "definition of rps": "即吞吐率，每秒钟服务可以处理的请求数",
     "delay analysis": "延时分析",
     "delay ratio": "延时比例",
     "delay time": "延时时间",
@@ -2102,9 +2105,6 @@
     "determine": "确定",
     "device": "设备",
     "device type": "设备类型",
-    "definition of rps": "即吞吐率，每秒钟服务可以处理的请求数",
-    "definition of average delay": "单位时间内服务处理请求或者任务的平均耗时",
-    "definition of error rate": "单位时间内所有请求中结果出错的请求所占比",
     "display fields": "显示字段",
     "display name": "展示名称",
     "display setting": "显示设置",
@@ -2409,7 +2409,6 @@
     "select sorting method": "选择排序方式",
     "selector": "选择器",
     "send data": "发送数据",
-    "service indicators for the current environment": "展示当前环境下所有接入的服务，以及该服务最近一小时内的关键请求指标",
     "server response": "服务器响应",
     "service API prefix": "服务 API 前缀",
     "service analysis": "服务分析",
@@ -2422,6 +2421,7 @@
     "set to benchmark log": "设置为基准日志",
     "shortest isolation time": "实例最短隔离时间",
     "show": "显示",
+    "show all connected services in the current environment, as well as the key request indicators of the service in the last hour": "展示当前环境下所有接入的服务，以及该服务最近一小时内的关键请求指标",
     "skip authentication": "跳过鉴权",
     "slow database tracking TOP10": "慢数据库追踪TOP10",
     "slow loading tracking": "慢加载追踪",
