feat(msp): highlight upstream and downstream nodes
feat(msp): rename pageName

feat(msp): highlight upstream and downstream nodes

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2194,7 +2194,6 @@
     "gateway load": "gateway load",
     "geography": "geography",
     "global strategy": "global strategy",
-    "global topology": "global topology",
     "grayscale release": "grayscale release",
     "header-X-App-Key": "use the appKey field as the request argument named \"appKey\" or the request header named \"X-App-Key\"",
     "hide no rule interface": "hide no rule interface",
@@ -2415,6 +2414,7 @@
     "service list": "service list",
     "service load protection": "service load protection",
     "service name": "service name",
+    "service overview": "Overview",
     "service registration list": "service registration list",
     "service routing prefix": "service routing prefix",
     "set datum point": "set datum point",
