--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2194,7 +2194,6 @@
     "gateway load": "网关负载",
     "geography": "地理",
     "global strategy": "全局策略",
-    "global topology": "全局拓扑",
     "grayscale release": "灰度发布",
     "header-X-App-Key": "请将appKey带在名为appKey的url参数或者名为X-App-Key的请求头上",
     "hide no rule interface": "隐藏无规则接口",
@@ -2415,6 +2414,7 @@
     "service list": "服务列表",
     "service load protection": "服务负载保护",
     "service name": "服务名",
+    "service overview": "服务总览",
     "service registration list": "服务注册列表",
     "service routing prefix": "服务路由前缀",
     "set datum point": "设置基准点",
