--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -885,6 +885,7 @@
     "Time remaining": "剩余时间",
     "Time spent": "所用时间",
     "Time tracking": "时间跟踪",
+    "Today": "今",
     "Up to 255 characters for directory name": "目录名最大长度255",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "开启后，相关应用部署需要项目管理员审核同意后才能继续进行",
     "When you click directly, it will execute cases without environment.": "直接点击时，所选环境为无环境",
