--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -885,6 +885,7 @@
     "Time remaining": "Time remaining",
     "Time spent": "Time spent",
     "Time tracking": "Time tracking",
+    "Today": "T",
     "Up to 255 characters for directory name": "Up to 255 characters for directory name",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "When enabled, application deployment needs to be reviewed and approved by the project administrator.",
     "When you click directly, it will execute cases without environment.": "when you click directly, will execute cases without environment",
