--- a/locales/zh.json
+++ b/locales/zh.json
@@ -725,7 +725,7 @@
     "project identifier": "项目标识",
     "project name": "项目名称",
     "project setting": "项目设置",
-    "project-app-name-tip": "只能使用小写字母或数字开头和结尾，连接符号可以使用 -",
+    "project-app-name-tip": "只能包含小写字母、数字和链接符号 -",
     "project/application/branch": "项目/应用/分支",
     "projects": "项目列表",
     "protected branch": "被保护分支",
