chore: update i18n by cli

--- a/locales/en.json
+++ b/locales/en.json
@@ -443,7 +443,6 @@
     "edit notification channel": "edit notification channel",
     "edit {name}": "edit {name}",
     "edited successfully": "edited successfully",
-    "email": "email",
     "enable": "enable",
     "enabled successfully": "enabled successfully",
     "enter key to save quickly": "enter key to save quickly",
@@ -772,6 +771,7 @@
     "request method": "request method",
     "required": "required",
     "requirement": "requirement",
+    "requirement & task": "requirement & task",
     "reset": "reset",
     "reset Password": "reset Password",
     "reset account password": "reset account password",
