feat: kanban refactor

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -925,7 +925,6 @@
     "addon info": "addon info",
     "addon setting": "addon setting",
     "all": "all",
-    "all issues": "all issues",
     "all iterations": "all iterations",
     "all tasks": "all tasks",
     "analyze ID": "analyze ID",
@@ -997,6 +996,7 @@
     "belongs to": "belongs to",
     "bigData app": "bigData app",
     "blocking": "blocking",
+    "board": "board",
     "branch": "branch",
     "branch comparison": "branch comparison",
     "branch deleted successfully": "branch deleted successfully",
@@ -1327,6 +1327,7 @@
     "issue custom fields": "issue custom fields",
     "issue detail": "issue detail",
     "issue field": "issue field",
+    "issue list": "issue list",
     "issue type": "issue type",
     "issue workflow": "issue workflow",
     "issue-workflow-config-tip": "Project issues include milestone, requirement, bug and task. And you can set up workflow state for each issue if you want",
