--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -925,7 +925,6 @@
     "addon info": "服务信息",
     "addon setting": "服务设置",
     "all": "全部",
-    "all issues": "全部事项",
     "all iterations": "所有迭代",
     "all tasks": "所有任务",
     "analyze ID": "分析 ID",
@@ -997,6 +996,7 @@
     "belongs to": "属于",
     "bigData app": "大数据应用",
     "blocking": "阻塞",
+    "board": "看板",
     "branch": "分支",
     "branch comparison": "分支对比",
     "branch deleted successfully": "删除分支成功",
@@ -1327,6 +1327,7 @@
     "issue custom fields": "事项自定义字段",
     "issue detail": "问题详情",
     "issue field": "事项字段",
+    "issue list": "事项列表",
     "issue type": "事项类型",
     "issue workflow": "事项工作流",
     "issue-workflow-config-tip": "事项类型覆盖里程碑、需求、缺陷和任务，可以对每个事项类型进行不同配置。如需改变工作流类型，您可以选择具体的事项类型进行修改。",
