feat: add user profile component

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -443,6 +443,7 @@
     "edit notification channel": "编辑通知渠道",
     "edit {name}": "编辑{name}",
     "edited successfully": "编辑成功",
+    "email": "邮箱",
     "enable": "启用",
     "enabled successfully": "启用成功",
     "enter key to save quickly": "回车键快速保存",
