fix(msp): topology overview
feat(msp): topology overview

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1912,6 +1912,7 @@
     "Failed to cancel. Please try again late.": "Failed to cancel. Please try again late.",
     "Flame Graph": "Flame Graph",
     "HTTP call": "HTTP call",
+    "HTTP status": "HTTP status",
     "IP blocking": "IP blocking",
     "If you delete a user, all authorized APIs for that user will be deleted.": "if you delete a user, all of the user's authorized API will be deleted!",
     "JavaScript error times": "JavaScript error times",
@@ -2042,6 +2043,7 @@
     "choose endpoint": "choose endpoint",
     "choose the language you want to connect": "choose the language you want to connect",
     "circuit breaker and current limiting": "circuit breaker and current limiting",
+    "circular dependency": "circular dependency",
     "city": "city",
     "clear configuration": "clear configuration",
     "client request restrictions": "client request restrictions",
@@ -2189,6 +2191,7 @@
     "forwarding address": "forwarding address",
     "forwarding path": "forwarding path",
     "forwarding type": "forwarding type",
+    "free service": "free service",
     "front-end monitor": "front-end monitor",
     "full text query": "full text query",
     "gateway load": "gateway load",
@@ -2468,6 +2471,8 @@
     "times/second": "times/second",
     "tolerable": "tolerable",
     "topology": "topology",
+    "topology analysis": "topology analysis",
+    "topology overview": "topology overview",
     "total connections": "total connections",
     "total number of errors": "total number of errors",
     "total span time": "total span time",
@@ -2489,6 +2494,7 @@
     "transport bytes(KBytes)": "transport bytes(KBytes)",
     "type filter string, press the Enter key": "type filter string, press the Enter key",
     "type highlight string, press the Enter key": "type highlight string, press the Enter key",
+    "unhealthy service": "unhealthy service",
     "uniform domain name entry": "uniform domain name entry",
     "update configuration": "update configuration",
     "update period": "update period",
