--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1912,6 +1912,7 @@
     "Failed to cancel. Please try again late.": "取消失败，请稍后重试",
     "Flame Graph": "火焰图",
     "HTTP call": "HTTP 调用",
+    "HTTP status": "HTTP 状态",
     "IP blocking": "IP 拦截",
     "If you delete a user, all authorized APIs for that user will be deleted.": "如果删除用户，该用户的所有已授权API都会删除！",
     "JavaScript error times": "JavaScript报错次数",
@@ -2042,6 +2043,7 @@
     "choose endpoint": "选择流量入口",
     "choose the language you want to connect": "选择想要接入的语言",
     "circuit breaker and current limiting": "熔断限流",
+    "circular dependency": "循环依赖",
     "city": "城市",
     "clear configuration": "清除配置",
     "client request restrictions": "客户端请求限制",
@@ -2189,6 +2191,7 @@
     "forwarding address": "转发地址",
     "forwarding path": "转发路径",
     "forwarding type": "转发方式",
+    "free service": "离群服务",
     "front-end monitor": "前端监控",
     "full text query": "全文查询",
     "gateway load": "网关负载",
@@ -2468,6 +2471,8 @@
     "times/second": "次/秒",
     "tolerable": "可容忍",
     "topology": "拓扑",
+    "topology analysis": "拓扑分析",
+    "topology overview": "拓扑概览",
     "total connections": "总连接数",
     "total number of errors": "错误总数",
     "total span time": "总 span 时间",
@@ -2489,6 +2494,7 @@
     "transport bytes(KBytes)": "传输字节(KBytes)",
     "type filter string, press the Enter key": "输入过滤字符串，回车确认",
     "type highlight string, press the Enter key": "输入高亮字符串，回车确认",
+    "unhealthy service": "不健康服务",
     "uniform domain name entry": "统一域名入口",
     "update configuration": "更新配置",
     "update period": "更新周期",
