feat(msp): optimize service list (#2287)

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2092,9 +2092,9 @@
     "data collection desc": "only Java Agent supports exception analysis and JVM monitoring. Data collection methods such as Jaeger and Open Telemetry only support the analysis and display of call link tracking data.",
     "data distribution": "data distribution",
     "day": "day",
-    "definition of average delay": "definition of average delay",
-    "definition of error rate": "definition of error rate",
-    "definition of rps": "definition of rps",
+    "definition of average delay": "average time taken by a service to process a request or task",
+    "definition of error rate": "percentage of all requests per unit of time that result in an error",
+    "definition of rps": "throughput, the number of requests per second that a service can handle",
     "delay analysis": "delay analysis",
     "delay ratio": "delay ratio",
     "delay time": "delay time",
