fix: fix issue state icon

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -924,6 +924,7 @@
     "addon info": "addon info",
     "addon setting": "addon setting",
     "all": "all",
+    "all issues": "all issues",
     "all iterations": "all iterations",
     "all tasks": "all tasks",
     "analyze ID": "analyze ID",
