--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -924,6 +924,7 @@
     "addon info": "服务信息",
     "addon setting": "服务设置",
     "all": "全部",
+    "all issues": "全部事项",
     "all iterations": "所有迭代",
     "all tasks": "所有任务",
     "analyze ID": "分析 ID",
